EDM-1695: Centralize org id source WIP
EDM-1695: Add middleware to set org id in api

EDM-1695: Add organizations model / List endpoint

EDM-1695: Add basic authz check for org existence

EDM-1695: Add unit test for basic auth and fix other tests

EDM-1695: Rename BasicOrgAuthz

EDM-1695: Add list, create, update org endpoints

EDM-1695: Pull org id from param

EDM-1695: Remove org management endpoints
